--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
       return (
         <div className="w-full max-w-4xl mx-auto p-6 bg-white rounded-lg shadow-lg">
-          <h1 className="text-2xl font-bold mb-6 text-gray-800 text-center">Arclio MCP Suite Cost Calculator</h1>
+          <h1 className="text-2xl font-bold mb-6 text-gray-800 text-center">MCP Context Hub Suite Cost Calculator</h1>
           
           <div className="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
             <div className="bg-gray-50 p-4 rounded-lg">
