update app title

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 					}).format(value)
 				}
 
-				// Format numbers with commas
+				// Format numbers with commas 
 				const formatNumber = value => {
 					return new Intl.NumberFormat('en-US').format(value)
 				}
@@ -176,7 +176,7 @@
 				return (
 					<div className="w-full max-w-4xl mx-auto p-6 bg-white rounded-lg shadow-lg">
 						<h1 className="text-2xl font-bold mb-6 text-gray-800 text-center">
-							Context Hub - MCP Suite Cost Calculator
+							Context Hub MCP Suite Cost Calculator
 						</h1>
 
 						<div className="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
